pi-cluster/cluster/apps/homer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
  labels:
    app: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
        - name: homer
          image: b4bz/homer:v26.4.1
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /www/assets/config.yml
              subPath: config.yml
      volumes:
        - name: config-volume
          configMap:
            name: homer-config
